Fix distortion of image when scaling
By wrapping the .img in a div, it keeps its proportions and size when zooming in/out

--- a/style.css
+++ b/style.css
@@ -25,15 +25,17 @@ li {
     list-style-type: none;
 }
 
-.top-part {
+.most-outer {
     background-color: #1F2937;
-    padding: 16px;
-    gap: 64px;
+}
+
+.top-part { 
     display: flex;
     flex-direction: column;
-    max-width: 65%;
-    
+    max-width: 70%;
     margin: auto;
+    gap: 128px;
+    padding-top: 16px;
 }
 
 .header {  
@@ -55,29 +57,39 @@ li {
 .hero {
     display: flex;
     justify-content: space-between;
+    gap: 128px;
+    margin-bottom: 128px;
 }
 
 .hero-main {
+    display: flex;
+    flex-wrap: wrap;
     font-size: 48px;
     font-weight: 900;
     color: #f9FAF8; 
-    max-width: 300px;
 }
 
 .hero-secondary {
-    max-width: 400px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .left-hero {
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 .itachi {
-    width: 300px;
+    max-width: 300px;
+    height: auto;
 }
 
-.exp {
-    background-color: #1F2937;
-    
+.button {
+    color: #ffffff;
+    background-color: #3882f6;
+    padding: 8px 24px;
+    border-radius: 8px;
+    border: none;
+    font-weight: bold;
 }
